--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "faker": "^5.5.3",
     "prettier": "^2.5.0"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "faker": "^5.5.3"
+    "mongodb": "^4.2.0"
   }
 }
