--- a/backend/package.json
+++ b/backend/package.json
@@ -2,24 +2,30 @@
   "name": "express_api_rest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
     "lint": "eslint"
   },
   "keywords": [],
-  "author": "",
+  "author": "JuandaCode",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "faker": "^5.5.3",
+    "morgan": "^1.10.0",
     "prettier": "^2.5.0"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongodb": "^4.2.0"
+    "mongodb": "^4.2.0",
+    "mongoose": "^6.0.14"
   }
 }
